# kros-autonomous-car

drivers/ouster/ouster_ros/: os1.launch
map_generation/config/: params_Daegu.yaml
map_generation/rviz/: load_map.rviz
map_generation/src/: map_generation.cpp
msgs/control_msgs/: CMakeLists.txt  package.xml
msgs/obj_msgs/msg/: Obj.msg
msgs/path_msgs/: CMakeLists.txt
msgs/path_msgs/msg/: Avoidance.msg  Bezier.msg  Trajectory.msg
perception/perception/multiobj_tracker/: CMakeLists.txt
planning/dwa/: CMakeLists.txt  package.xml
planning/dwa/include/dwa/: dwa.h
planning/dwa/src/: .~lock.wo_lanes.csv#  dwa.cpp  w_lanes.csv  w_lanes_test.csv  wo_lanes.csv
planning/dwa/yaml/: costmap_common_params.yaml  dwa_local_planner_params.yaml  map.yaml
planning/dynamic_planning/: CMakeLists.txt
planning/dynamic_planning/launch/: dynamic_planning.launch
planning/dynamic_planning/src/: dynamic_planning (copy).cpp  dynamic_planning.cpp
planning/frenet/: CMakeLists.txt  package.xml
planning/frenet/launch/: move_dwa.launch
planning/frenet/src/: data.csv  frenet.cpp  test.cpp  w_lanes.csv  wo_lanes.csv
planning/global_planning/config/: params.yaml
simulation/simulation/: CMakeLists.txt  package.xml
simulation/simulation/include/simulation/: MPC.h  simulation.h
simulation/simulation/launch/: simulation.launch
simulation/simulation/src/: 10.csv  30.csv  50.csv  MPC.cpp  dynamic  dynamic_7.0_10.0  dynamic_static  obs_path.yaml  simulation.cpp  simulation_node.cpp  static  static_prob  test.csv  test2.csv  test3.csv  w_lanes.csv  wo_lanes.csv
(+50 files in other folders)
